Fix wrong height of taken-lectures placeholder

--- a/react/src/styles/App.module.scss
+++ b/react/src/styles/App.module.scss
@@ -3331,7 +3331,7 @@ a {
                     + (#{$section-padding} * 2 + 1px)
 
                     + (#{$section-padding} * 2 + 1px)
-                    + (#{$line-height-normal} * 3 + 8px * 2)
+                    + (#{$line-height-normal} * 4 + 8px * 3)
                     + #{$section-padding}
                     + #{$section-margin-bottom}
                 )
